[project]
name = "work"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nijigen-plot"}
]
dependencies = [
    "mysql-connector-python>=9.0.0",
    "python-dotenv>=1.0.1",
    "boto3>=1.35.24",
    "flask>=3.0.3",
    "pillow>=10.4.0",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/work"]
